--- a/CSSFinalProject.css
+++ b/CSSFinalProject.css
@@ -112,6 +112,9 @@ button:hover {
     display: inline;
     width: 5%;
     height: 5%;
+    border-style: inset;
+    border-color: white;
+    border-width: 3px;
 }
 
 .checkout {
