--- a/CSSFinalProject.css
+++ b/CSSFinalProject.css
@@ -112,9 +112,11 @@ button:hover {
     display: inline;
     width: 5%;
     height: 5%;
-    border-style: inset;
+    border-style: dashed;
     border-color: white;
     border-width: 3px;
+    padding: var(--default-padding);
+    margin: var(--default-margin);
 }
 
 .checkout {
